# djangocon-us-2023-tdd-tutorial

./: .env.temp  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  readme.md
iam/: models.py
iam/migrations/: 0001_initial.py
iam/user/: models.py  serializers.py
iam/user/tests/factories/: users.py
server/: settings.py  urls.py
todo/: models.py  tests.py  urls.py
todo/items/: models.py  permissions.py  serializers.py  viewsets.py
todo/items/tests/factories/: items.py
todo/lists/: models.py  permissions.py  serializers.py  test_lists.py  viewsets.py
todo/lists/tests/factories/: lists.py
todo/migrations/: 0001_initial.py  0002_item_content.py  0003_item_deadline_list_deadline.py
utils/mixins/viewsets/: action_serializer_mapping.py
